# kurv

./: .cocorc  .gitignore  .kurvrc  Cargo.toml  LICENSE  README.md  Taskfile.yaml  check_size.py  rustfmt.toml  🧺 kurv.code-workspace
.agents/: AGENTS.md
.agents/skills/create-github-issues/: SKILL.md
.bruno/kurv/: bruno.json  collection.bru  status.bru
.bruno/kurv/eggs/: get-one.bru  list.bru
.bruno/kurv/eggs/env/: merge.bru  replace.bru
.bruno/kurv/environments/: local.bru
.github/: copilot-instructions.md  icon-logo-h64.ai
.github/actions/check-version/: Dockerfile  action.yml  version_checker.py
.github/workflows/: checks.yml  ci.yml  draft-release.yml  publish.yml
.github/workflows/composites/setup/: action.yml
app/kurv/: .release.yml  Cargo.toml
app/kurv/src/api/: eggs.rs  mod.rs
app/kurv/src/cli/cmd/: collect.rs  default.rs  env.rs  list.rs  mod.rs
app/kurv/src/cli/cmd/api/: mod.rs
app/kurv/src/cli/color/: mod.rs
app/kurv/src/cli/components/: help.rs  logo.rs
app/kurv/src/common/: info.rs  log.rs  str.rs
app/kurv/src/common/tcp/: mod.rs
app/kurv/src/kurv/: mod.rs
app/kurv/src/kurv/egg/: load.rs  mod.rs
app/kurv/src/kurv/plugins/: mod.rs
app/kurv/src/kurv/state/: mod.rs
app/kurv/tests/unit/: egg_test.rs  mod.rs  plugin_test.rs  state_test.rs  tcp_test.rs
crates/kurv-plugin-sdk/: Cargo.toml
crates/kurv-plugin-sdk/src/: lib.rs
crates/kurv-plugin-sdk/tests/: discover_env_test.rs  version_test.rs
plugins/: kurv-hello-world.bat
plugins/kurv-ui/: .release.yml  Cargo.toml
plugins/kurv-ui/frontend/: .prettierignore  .prettierrc  components.json  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
plugins/kurv-ui/frontend/public/: server-globals.js
plugins/kurv-ui/frontend/src/: global.d.ts  main.css  main.tsx  routes.tsx
plugins/kurv-ui/frontend/src/components/: protected-route.tsx
plugins/kurv-ui/frontend/src/components/blocks/: egg-action-buttons.tsx  egg-status-badge.tsx  icon-button.tsx  labeled-input.tsx  login-form.tsx  user-password-form.tsx
plugins/kurv-ui/frontend/src/components/templates/: admin-layout.tsx  root.tsx
plugins/kurv-ui/frontend/src/components/ui/: button.tsx  field.tsx  input.tsx  kurv-logo.tsx  label.tsx  textarea.tsx  toaster.tsx
plugins/kurv-ui/frontend/src/contexts/auth/: context.tsx  provider.tsx
plugins/kurv-ui/frontend/src/contexts/globals/: context.tsx
plugins/kurv-ui/frontend/src/contexts/setup/: context.tsx  provider.tsx
plugins/kurv-ui/frontend/src/contexts/theme/: context.tsx  provider.tsx
plugins/kurv-ui/frontend/src/hooks/: use-auth.ts
plugins/kurv-ui/frontend/src/hooks/use-api/: hook.ts  types.ts
plugins/kurv-ui/frontend/src/pages/: login.tsx  setup.tsx
plugins/kurv-ui/frontend/src/pages/home/: egg-detail.tsx  index.tsx
plugins/kurv-ui/src/: lib.rs  main.rs
plugins/kurv-ui/src/app/: kurv_ui.rs
plugins/kurv-ui/src/app/frontend/: globals.rs  mime.rs  mod.rs
plugins/kurv-ui/src/app/kurv_ui/: api.rs
plugins/kurv-ui/src/app/kurv_ui/api/: auth.rs  setup.rs
plugins/kurv-ui/src/app/kurv_ui/api/kurv/: mod.rs
plugins/kurv-ui/src/app/kurv_ui/extractors/: auth_user.rs
plugins/kurv-ui/src/app/kurv_ui/services/: kurv_api.rs  mod.rs  setup.rs  users.rs
plugins/kurv-ui/src/common/: err.rs  middleware.rs
plugins/kurv-ui/src/common/auth/: err.rs  mod.rs
plugins/kurv-ui/src/common/auth/jwt/: codec.rs  extractor.rs
plugins/kurv-ui/src/common/extractor/: json.rs
plugins/kurv-ui/src/db/migrations/: README.md  m20260419_102115_big_bang.rs  mod.rs
plugins/kurv-ui/src/db/models/: mod.rs  user.rs
scripts/: release.py
src/: lib.rs  main.rs
src/api/: eggs.rs  err.rs  mod.rs  status.rs
src/api/eggs/: env.rs
src/cli/: mod.rs
src/cli/cmd/: collect.rs  default.rs  egg.rs  list.rs  mod.rs  server_help.rs  stop.rs  stop_start.rs
src/cli/cmd/api/: eggs.rs  mod.rs
src/cli/color/: mod.rs  style.rs  theme.rs
src/cli/components/: help.rs  logo.rs  mod.rs
src/common/: duration.rs  error.rs  info.rs  log.rs  mod.rs  str.rs
src/common/proc/: mod.rs  signal.rs  windows.rs
src/common/str/: case.rs  mod.rs  to_string.rs
src/common/tcp/: mod.rs  pool.rs
src/kurv/: kill.rs  mod.rs  spawn.rs  stdio.rs  sync.rs  workers.rs
src/kurv/egg/: load.rs  mod.rs
src/kurv/state/: eggs.rs  mod.rs
target-test-temp/: .rustc_info.json
tests/: unit_tests.rs
tests/unit/: egg_test.rs  state_test.rs  theme_test.rs
