[package]
name = "kurv"
version = "0.0.2"
edition = "2021"
description = "A process manager to daemonize commands and programs. Inspired by pm2, but lightweight and not as featureful."
authors = ["Lucas Colombo<lucasncolombo@gmail.com>"]
categories = ["command-line-utilities"]
keywords = ["cli", "process", "manager", "daemon", "daemonize"]
homepage = "https://kurv.lucode.ar"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/lucas-labs/kurv"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
rpath = false
overflow-checks = false
debug = 0
debug-assertions = false

[dependencies]
anyhow = "1.0.75"
chrono = { version="0.4.31", features = ["serde"] }
cli-table = "0.4.7"
command-group = "5.0.1"
crossterm = "0.27.0"
form_urlencoded = "1.2.1"
htmlparser = "0.1.1"
indoc = "2.0.4"
log = "0.4.20"
pico-args = "0.5.0"
regex-lite = "0.1.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
velcro = "0.5.4"
