[package]
name = "kurv"
version = "0.1.0"
edition = "2024"
description = "A process manager to daemonize commands and programs. Inspired by pm2, but lightweight and not as featureful."
authors = ["Lucas Colombo<lucasncolombo@gmail.com>"]
categories = ["command-line-utilities"]
keywords = ["cli", "process", "manager", "daemon", "daemonize"]
homepage = "https://kurv.lucode.dev"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/lucas-labs/kurv"

[profile.dev]
incremental = true

[profile.release]
opt-level = "z"
codegen-units = 1
panic = "abort"
overflow-checks = false
strip = "symbols"
lto = "fat"
rpath = false
debug = 0
debug-assertions = false

[dependencies]
anyhow = "1.0.100"
chrono = { version="0.4.42", features = ["serde"] }
cli-table = "0.5.0"
command-group = "5.0.1"
crossterm = "0.29.0"
form_urlencoded = "1.2.2"
htmlparser = "0.2.1"
indoc = "2.0.7"
log = "0.4.28"
pico-args = "0.5.0"
regex-lite = "0.1.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde-saphyr = "0.0.10"
velcro = "0.5.4"

[dev-dependencies]
tempfile = "3.8"
