[workspace]
resolver = "3"
members = ["app/kurv", "crates/*", "plugins/*"]

[workspace.package]
edition = "2024"
authors = ["Lucas Colombo<lucasncolombo@gmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/lucas-labs/kurv"
homepage = "https://kurv.lucode.dev"

[workspace.dependencies]
kurv-plugin-sdk = { path = "crates/kurv-plugin-sdk" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.dev]
incremental = true

[profile.release]
opt-level = "z"
codegen-units = 1
panic = "abort"
overflow-checks = false
strip = "symbols"
lto = "fat"
rpath = false
debug = 0
debug-assertions = false
